--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <table class="imgtable"><tr><td>
 <img src="fig/p1.png" alt="CS" width="320px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p><a href="/paper/T.pdf">Volume Conjecture for rational Dehn-filled 3-manifolds along Twist Knots</a><br />
+<li><p><a href="/paper/T.pdf">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
 
-<b>Chuwen Wang, ---</b><br />
+<b>joint work with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
 
 in preparation<br />
 
