--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-<img src="fig/p1.png" alt="CS" width="320px" height="160px" />&nbsp;</td>
+<img src="fig/twist.pdf" alt="CS" width="320px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p><a href="/paper/T.pdf">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
+<li><p><a href="https://arxiv.org/abs/2410.20489">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
 
 <b>joint work with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
 
-in preparation<br />
+arXiv:2410.20489 [math.GT] <br />
 
 [<a href="paper/" target=&ldquo;blank&rdquo;>PDF</a>] [<a href="https://mathscinet.ams.org/mathscinet/index.html" target=&ldquo;blank&rdquo;>Link</a>] 
 </p>
