--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@ arXiv:2410.20489 [math.GT] <br />
             <b>Location</b>
         </td>
         <td class="c4">
-            <b>Record</b>
+            <b>Info</b>
+        </td>
+        <td class="c4">
+            <b>Slide</b>
         </td>
     </tr>
     <tr class="r2">
@@ -204,30 +207,77 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c2"> Xiamen University Summer School </td>
         <td class="c3"> Xiamen, China </td>
         <td class="c4"> <a href="/activities1.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r3">
         <td class="c1"> 2021/12/25 4~6pm </td>
         <td class="c2"> Xiamen Geometric Topology Conference </td>
         <td class="c3"> Xiamen, China </td>
         <td class="c4"> <a href="/activities2.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r4">
         <td class="c1"> 2021/12/25 4~6pm </td>
         <td class="c2"> A visit to Fudan University </td>
         <td class="c3"> Shanghai, China </td>
         <td class="c4"> <a href="/activities3.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r5">
         <td class="c1"> 2021/12/25 4~6pm </td>
         <td class="c2"> China Geometry Day </td>
         <td class="c3"> Beijing, China </td>
         <td class="c4"> <a href="/activities4.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r6">
         <td class="c1"> 2021/12/25 4~6pm </td>
         <td class="c2"> China Geometry Day </td>
         <td class="c3"> Beijing, China </td>
         <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r7">
+        <td class="c1"> 2024/06/29 ~ 2024/06/30 </td>
+        <td class="c2"> The 4th Xi'an Geometric Topology Conference </td>
+        <td class="c3"> Xi'an, China </td>
+        <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r8">
+        <td class="c1"> 2024/07/06 ~ 2024/07/07 </td>
+        <td class="c2"> Quantum topology skein algebra seminar </td>
+        <td class="c3"> Hefei, China </td>
+        <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r9">
+        <td class="c1"> 2024/07/22 ~ 2024/07/27 </td>
+        <td class="c2"> 2024 Geometric Analysis Annual Conference </td>
+        <td class="c3"> Hohhot, China </td>
+        <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r10">
+        <td class="c1"> 2024/07/27 ~ 2024/08/03 </td>
+        <td class="c2"> 2024 NKU Summer Short Course </td>
+        <td class="c3"> Hefei, China </td>
+        <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r10">
+        <td class="c1"> 2024/09/18 ~ 2024/09/23 </td>
+        <td class="c2"> 2024 Differential Geometry Youth Forum </td>
+        <td class="c3"> Jiaxing, China </td>
+        <td class="c4"> <a href="/activities5.html">Click Here</a></td>
+        <td class="c5"> <a href="/activities1.html">Click Here</a></td>
+    </tr>
+    <tr class="r11">
+        <td class="c1"> 2024/10/20 </td>
+        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
+        <td class="c3"> Hangchow, China </td>
+        <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
+        <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
     </tr>
 </table>
 </div></div>
