--- a/index.html
+++ b/index.html
@@ -179,6 +179,41 @@ arXiv:2410.20489 [math.GT] <br />
     </td></tr></table>
 </ul>
 
+
+<h2>Talks</h2>
+<p>
+</p>
+<div class="infoblock">
+<div class="blockcontent">
+  <table id="countries">
+    <tr class="r1">
+        <td class="c1">
+            <b>Date</b>
+        </td>
+        <td class="c2">
+            <b>Title</b>
+        </td>
+        <td class="c3">
+            <b>Location</b>
+        </td>
+        <td class="c4">
+            <b>Zoom ID
+            </b>
+        </td>
+        <td class="c5">
+            <b>Info</b>
+        </td>
+    </tr>
+    <tr class="r2">
+        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c2"> An Introduction to Colored Jones Polynomial </td>
+        <td class="c3"> Conference Room on the Third Floor of the School of Mathematics, Renmin University of China </td>
+        <td class="c5"> /</td>
+        <td class="c5"> <a href="/semi1.html">Click Here</a></td>
+    </tr>
+</table>
+</div></div>
+
 <h2>Activities</h2>
 <p>
 </p>
@@ -282,39 +317,7 @@ arXiv:2410.20489 [math.GT] <br />
 </table>
 </div></div>
 
-<h2>Seminars</h2>
-<p>
-</p>
-<div class="infoblock">
-<div class="blockcontent">
-  <table id="countries">
-    <tr class="r1">
-        <td class="c1">
-            <b>Date</b>
-        </td>
-        <td class="c2">
-            <b>Title</b>
-        </td>
-        <td class="c3">
-            <b>Location</b>
-        </td>
-        <td class="c4">
-            <b>Zoom ID
-            </b>
-        </td>
-        <td class="c5">
-            <b>Info</b>
-        </td>
-    </tr>
-    <tr class="r2">
-        <td class="c1"> 2021/12/25 4~6pm </td>
-        <td class="c2"> An Introduction to Colored Jones Polynomial </td>
-        <td class="c3"> Conference Room on the Third Floor of the School of Mathematics, Renmin University of China </td>
-        <td class="c5"> /</td>
-        <td class="c5"> <a href="/semi1.html">Click Here</a></td>
-    </tr>
-</table>
-</div></div>
+
 
 
 
