--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
 <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
 <div class="menu-item"><a href="https://mathoverflow.net/users/261646/汪楚文">MathOverflow</a></div>
-<div class="menu-item"><a href="http://124.221.149.252">YYL(friend)</a></div>
 <div class="menu-category">Visitor Stats.</div>
 <div><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=57n5qo8841x&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
 </div>
@@ -57,29 +56,28 @@
 <td align="left"><h2>Chuwen Wang<!--<img src="/fig/cn.png" alt="CN" />--></a> <br /></h2>
 <p>Ph.D  candidate<br />
 <a href="http://math.ruc.edu.cn">Department of Mathematics</a><br />
-<a href="https://www.ruc.edu.cn">Renmin University</a><br /><br />
-<!--Advisor:<a href="http://math.ruc.edu.cn/szdw/zgjs/0851245772014d5c91683c2fc8738bda.htm"> H. Ge</a><br /><br />-->
-59 Zhongguancun Street, Haidian District, Beijing, China
-
-</p>
-</td></tr></table>
-<h2>Contact</h2>
+<a href="https://www.ruc.edu.cn">Renmin University</a><br />
 <p><a href="mailto:www.chuwenwang@ruc.edu.cn">www.chuwenwang@ruc.edu.cn</a> <br />
     <a href="mailto:www.chuwenwang2001@gmail.com">www.chuwenwang2001@gmail.com</a> <br />    
 </p>
 <a href="https://twitter.com/Chuwen_WANG" class="twitter-follow-button">Follow @WangC.W.</a>
 <script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
-'script', 'twitter-wjs');</script>
+'script', 'twitter-wjs');</script> <br />
+<!--Advisor:<a href="http://math.ruc.edu.cn/szdw/zgjs/0851245772014d5c91683c2fc8738bda.htm"> H. Ge</a><br /><br />-->
+59 Zhongguancun Street, Haidian, Beijing, China
+</p>
+</td></tr></table>
+
 <h2>Research</h2>
 <ul>
 <li><p>Geometric Topology: Knot Theory, Volume Conjecture</p>
 </li>
-<li><p>Hyperbolic Geometry: Thurston’s geometrization conjecture , Anti-de sitter space</p>
+<li><p>Hyperbolic Geometry: Thurston’s geometrization conjecture, Anti-de sitter space</p>
 </li>
-<li><p>Algebraic Geometry: Complex Algebraic Geometry</p>
+<li><p>Algebraic Geometry: K-theory, L-theory</p>
 </li>
-<li><p>Algebraic Number Theory: Representation Theory, Quantized Enveloping Algebra, K-theory&L-theory</p>
+<li><p>Representation Theory: Quantum groups, Ribbon Hopf algebra</p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -91,7 +89,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
   <a href="https://www.ruc.edu.cn">Renmin University</a>, 2022</p>
 </li>
 </ul>
-<h2>Papers</h2>
+<h2>Publications</h2>
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
