--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>WCW</h1>
+<h1>Chuwen Wang [汪楚文]'s website</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="/fig/wcwy.jpg" alt="Wang Chuwen" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>Chuwen Wang<!--<img src="/fig/cn.png" alt="CN" />--></a> <br /></h2>
 <p>Ph.D  candidate<br />
-<a href="http://math.ruc.edu.cn">Department of Mathematics</a><br />
+<a href="http://math.ruc.edu.cn">Department of Mathematics</a>
 <a href="https://www.ruc.edu.cn">Renmin University</a><br />
+59 Zhongguancun Street, Haidian, Beijing, China
 <p><a href="mailto:www.chuwenwang@ruc.edu.cn">www.chuwenwang@ruc.edu.cn</a> <br />
     <a href="mailto:www.chuwenwang2001@gmail.com">www.chuwenwang2001@gmail.com</a> <br />    
 </p>
@@ -65,7 +66,7 @@
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
 'script', 'twitter-wjs');</script> <br />
 <!--Advisor:<a href="http://math.ruc.edu.cn/szdw/zgjs/0851245772014d5c91683c2fc8738bda.htm"> H. Ge</a><br /><br />-->
-59 Zhongguancun Street, Haidian, Beijing, China
+
 </p>
 </td></tr></table>
 
