--- a/index.html
+++ b/index.html
@@ -195,19 +195,26 @@ arXiv:2410.20489 [math.GT] <br />
             <b>Location</b>
         </td>
         <td class="c4">
-            <b>Zoom ID
+            <b>Link
             </b>
         </td>
         <td class="c5">
-            <b>Info</b>
+            <b>Slide</b>
         </td>
     </tr>
     <tr class="r2">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2021/12/25 </td>
         <td class="c2"> An Introduction to Colored Jones Polynomial </td>
-        <td class="c3"> Conference Room on the Third Floor of the School of Mathematics, Renmin University of China </td>
+        <td class="c3"> Renmin University of China </td>
         <td class="c5"> /</td>
-        <td class="c5"> <a href="/semi1.html">Click Here</a></td>
+        <td class="c4"> <a href="/semi1.html">Click Here</a></td>
+    </tr>
+    <tr class="r3">
+        <td class="c1"> 2024/10/20 </td>
+        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
+        <td class="c3"> Hangchow, China </td>
+        <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
+        <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
     </tr>
 </table>
 </div></div>
@@ -229,42 +236,42 @@ arXiv:2410.20489 [math.GT] <br />
             <b>Location</b>
         </td>
         <td class="c4">
-            <b>Info</b>
+            <b>Link</b>
         </td>
         <td class="c4">
-            <b>Slide</b>
+            <b>Notes</b>
         </td>
     </tr>
     <tr class="r2">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2021/12/25  </td>
         <td class="c2"> Xiamen University Summer School </td>
         <td class="c3"> Xiamen, China </td>
         <td class="c4"> <a href="/activities1.html">Click Here</a></td>
         <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r3">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2021/12/25 </td>
         <td class="c2"> Xiamen Geometric Topology Conference </td>
         <td class="c3"> Xiamen, China </td>
         <td class="c4"> <a href="/activities2.html">Click Here</a></td>
         <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r4">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2021/12/25 </td>
         <td class="c2"> A visit to Fudan University </td>
         <td class="c3"> Shanghai, China </td>
         <td class="c4"> <a href="/activities3.html">Click Here</a></td>
         <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r5">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2023/10/21 ~ 2023/10/22 </td>
         <td class="c2"> China Geometry Day </td>
         <td class="c3"> Beijing, China </td>
         <td class="c4"> <a href="/activities4.html">Click Here</a></td>
         <td class="c5"> <a href="/activities1.html">Click Here</a></td>
     </tr>
     <tr class="r6">
-        <td class="c1"> 2021/12/25 4~6pm </td>
+        <td class="c1"> 2021/12/25 </td>
         <td class="c2"> China Geometry Day </td>
         <td class="c3"> Beijing, China </td>
         <td class="c4"> <a href="/activities5.html">Click Here</a></td>
