--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ arXiv:2410.20489 [math.GT] <br />
             <b>Title</b>
         </td>
         <td class="c3">
-            <b>Location</b>
+            <b>Conference</b>
         </td>
         <td class="c4">
             <b>Link
@@ -211,8 +211,8 @@ arXiv:2410.20489 [math.GT] <br />
     </tr>
     <tr class="r3">
         <td class="c1"> 2024/10/20 </td>
-        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
-        <td class="c3"> Hangchow, China </td>
+        <td class="c2"> On the Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots </td>
+        <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
         <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
         <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
     </tr>
@@ -230,7 +230,7 @@ arXiv:2410.20489 [math.GT] <br />
             <b>Date</b>
         </td>
         <td class="c2">
-            <b>Title</b>
+            <b>Conference</b>
         </td>
         <td class="c3">
             <b>Location</b>
