--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <td align="left"><h2>Chuwen Wang<!--<img src="/fig/cn.png" alt="CN" />--></a> <br /></h2>
 <p>Ph.D  candidate<br />
 
-<p>
+59 Zhongguancun Street, Haidian, Beijing, China
+<p><a href="mailto:www.chuwenwang@ruc.edu.cn">www.chuwenwang@ruc.edu.cn</a> <br />
     <a href="mailto:www.chuwenwang2001@gmail.com">www.chuwenwang2001@gmail.com</a> <br />    
 </p>
 <a href="https://twitter.com/Chuwen_WANG" class="twitter-follow-button">Follow @WangC.W.</a>
@@ -79,7 +80,15 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <li><p>Representation Theory: Quantum groups, Ribbon Hopf algebra</p>
 </li>
 </ul>
-
+<h2>Education</h2>
+<ul>
+<li><p>B.S. , Pure Mathematics and Applied Mathematics
+<a href="https://www.ruc.edu.cn">Renmin University</a>, 2018</p>
+</li>
+<li><p>Ph.D , Pure Mathematics 
+  <a href="https://www.ruc.edu.cn">Renmin University</a>, 2022</p>
+</li>
+</ul>
 <h2>Publications</h2>
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
@@ -205,6 +214,13 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
         <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
         <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
+    </tr>
+    <tr class="r3">
+        <td class="c1"> 2025/03/13~17 </td>
+        <td class="c2"> Recent advances in the Volume Conjecture</td>
+        <td class="c3"> Tsinghua Sanya International Forum </td>
+        <td class="c4"> <a href="https://www.tsimf.cn/meeting/detail?id=415">Click Here</a></td>
+        <td class="c5"> <a href="/slides/">Click Here</a></td>
     </tr>
 </table>
 </div></div>
