--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
     </tr>
     <tr class="r3">
-        <td class="c1"> 2025/03/13~17 </td>
+        <td class="c1"> 2025/03/13 ~ 2025/03/17 </td>
         <td class="c2"> Recent advances in the Volume Conjecture</td>
         <td class="c3"> Tsinghua Sanya International Forum </td>
         <td class="c4"> <a href="https://www.tsimf.cn/meeting/detail?id=415">Click Here</a></td>
@@ -296,6 +296,21 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c1"> 2024/10/20 </td>
         <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
         <td class="c3"> Hangchow, China </td>
+    </tr>
+    <tr class="r12">
+        <td class="c1"> 2025/03/13 ~ 2025/03/17 </td>
+        <td class="c2"> Tsinghua Sanya International Forum </td>
+        <td class="c3"> Sanya, China </td>
+    </tr>
+    <tr class="r12">
+        <td class="c1"> 2025/04/15 </td>
+        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
+        <td class="c3"> Beijing, China </td>
+    </tr>
+    <tr class="r12">
+        <td class="c1"> 2025/05/09 ~ 2025/05/12 </td>
+        <td class="c2"> Fudan University PhD Exchange Meeting </td>
+        <td class="c3"> Beijing, China </td>
     </tr>
 </table>
 </div></div>
