--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@ arXiv:2410.20489 [math.GT] <br />
     </tr>
     <tr class="r12">
         <td class="c1"> 2025/04/15 </td>
-        <td class="c2"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
+        <td class="c2"> Beijing Geometry Day, Beijing Institute of Technology </td>
         <td class="c3"> Beijing, China </td>
     </tr>
     <tr class="r12">
         <td class="c1"> 2025/05/09 ~ 2025/05/12 </td>
         <td class="c2"> Fudan University PhD Exchange Meeting </td>
-        <td class="c3"> Beijing, China </td>
+        <td class="c3"> Shanghai, China </td>
     </tr>
 </table>
 </div></div>
