--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 <td id="layout-menu">
 <div class="menu-category">menu</div>
 <div class="menu-item"><a href="/">Home</a></div>
-<div class="menu-item"><a href="/research.html">Research</a></div>
-<div class="menu-item"><a href="/publications.html">Publication</a></div>
-<div class="menu-item"><a href="/activities.html">Activities</a></div>
 <div class="menu-item"><a href="/notes.html">Notes</a></div>
 <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
 <div class="menu-category">Demos</div>
@@ -73,7 +70,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <li><p>Geometric Topology: Knot Theory, Volume Conjecture</p>
 </li>
-<li><p>Hyperbolic Geometry: Thurston’s geometrization conjecture, Anti-de sitter space</p>
+<li><p>Hyperbolic Geometry: Thurston's geometrization conjecture, Anti-de sitter space</p>
 </li>
 <li><p>Algebraic Geometry: K-theory, L-theory</p>
 </li>
@@ -93,7 +90,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-  <img src="fig/2.png" alt="CS" width="320px" height="160px" />&nbsp;</td>
+  &nbsp;</td>
   <td align="left"><ul>
   <li><p><a href="/paper/FMT.pdf">Cyclotomic Expansion of the Colored `SU(n)` Invariants of Torus Knots</a><br />
   
@@ -110,15 +107,11 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-    <img src="fig/p3.jpg" alt="CS" width="320px" height="160px" />&nbsp;</td>
+    &nbsp;</td>
     <td align="left"><ul>
     <li><p><a href="/paper/CE.pdf">On the Rigidity of 3-manifold in the 3-dimensional anti-de Sitter Space</a><br />
-
     <b>Chuwen Wang, ---</b><br />
-
     in preparation<br />
-
-  
     </p>
     </li>
     </ul>
@@ -145,7 +138,7 @@ arXiv:2410.20489 [math.GT] <br />
 <ul>
     <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
     <table class="imgtable"><tr><td>
-        <img src="fig/4.jpg" alt="CS" width="320px" height="160px" />&nbsp;</td>
+        &nbsp;</td>
         <td align="left"><ul>
         <li><p><a href="/paper/T.pdf">Relative Reshetikhin-Turaev invariants and Volume Conjecture of Whitehead link </a><br />
     
@@ -163,7 +156,7 @@ arXiv:2410.20489 [math.GT] <br />
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-    <img src="fig/4.jpg" alt="CS" width="320px" height="160px" />&nbsp;</td>
+    &nbsp;</td>
     <td align="left"><ul>
     <li><p><a href="/paper/T.pdf">A proof of Atiyah-Floer Conjecture</a><br />
 
