--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 <div class="menu-category">Software</div>
 <div class="menu-item"><a href="/store">NFTStore</a></div>
 <div class="menu-item"><a href="/crypto">Crypto</a></div>
-<div class="menu-item"><a href="/meta">Metaverse</a></div>
 <div class="menu-category">links</div>
 <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
 <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
@@ -120,7 +119,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-<img src="fig/twist.pdf" alt="CS" width="320px" height="160px" />&nbsp;</td>
+<img src="fig/twist.png" alt="CS" width="320px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://arxiv.org/abs/2410.20489">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
 
@@ -198,15 +197,15 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c1"> 2021/12/25 </td>
         <td class="c2"> An Introduction to Colored Jones Polynomial </td>
         <td class="c3"> Renmin University of China </td>
-        <td class="c5"> /</td>
-        <td class="c4"> <a href="/semi1.html">Click Here</a></td>
+        <td class="c5"> <a href="/semi1.html">Click Here</a></td>
+        <td class="c4"> /</td> 
     </tr>
     <tr class="r3">
         <td class="c1"> 2024/10/20 </td>
         <td class="c2"> On the Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots </td>
         <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
         <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
-        <td class="c5"> <a href="/slides/twist.pdf">Click Here</a></td>
+        <td class="c5"> <a href="/slides/twistRT.pdf">Click Here</a></td>
     </tr>
     <tr class="r3">
         <td class="c1"> 2025/03/13 ~ 2025/03/17 </td>
