--- a/notes.html
+++ b/notes.html
@@ -13,23 +13,7 @@
   <td id="layout-menu">
     <div class="menu-category">menu</div>
     <div class="menu-item"><a href="/">Home</a></div>
-    <div class="menu-item"><a href="/research.html">Research</a></div>
-    <div class="menu-item"><a href="/publications.html">Publication</a></div>
-    <div class="menu-item"><a href="/activities.html">Activities</a></div>
-    <div class="menu-item"><a href="/notes.html">Notes</a></div>
-    <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
-    <div class="menu-category">Demos</div>
-    <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
-    <div class="menu-item"><a href="snake.html">Snake</a></div>
-    <div class="menu-category">Software</div>
-    <div class="menu-item"><a href="/store">NFTStore</a></div>
-    <div class="menu-item"><a href="/crypto">Crypto</a></div>
-    <div class="menu-item"><a href="/meta">Metaverse</a></div>
-    <div class="menu-category">links</div>
-    <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
-    <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
-    <div class="menu-item"><a href="https://mathoverflow.net/users/261646/汪楚文">MathOverflow</a></div>
-    <div class="menu-item"><a href="http://124.221.149.252">YYL(friend)</a></div>
+
     <div class="menu-category">Visitor Stats.</div>
     <div><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=57n5qo8841x&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
     </div>
@@ -49,15 +33,14 @@
   </h1>
   <p>
   
-  
   </p>
-  <h2>FIG</h2>
-  <h2>FILE</h2>
+
+  <h2>FILES</h2>
   <ul>
-    <li><p><a href="/Paper.zip">Twist0312.zip</p>
+    <li><p><a href="zip/Paper.zip">Twist0312.zip</p>
   </ul>
   <ul>
-    <li><p><a href="/Paper1.zip">Twist0318.zip</p>
+    <li><p><a href="zip/Paper1.zip">Twist0318.zip</p>
   </ul>
 </body>
 </html>
