--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
 <div class="menu-category">Demos</div>
 <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
-<div class="menu-item"><a href="snake.html">Snake</a></div>
+<div class="menu-item"><a href="/snake">Snake</a></div>
 <div class="menu-category">Software</div>
-<div class="menu-item"><a href="/store">NFTStore</a></div>
+<div class="menu-item"><a href="/NFT">NFTStore</a></div>
 <div class="menu-item"><a href="/crypto">Crypto</a></div>
 <div class="menu-category">links</div>
 <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
@@ -119,7 +119,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
-<img src="fig/twist.png" alt="CS" width="320px" height="160px" />&nbsp;</td>
+<img src="fig/twist.png" alt="CS" width="455px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://arxiv.org/abs/2410.20489">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
 
