--- a/crypto/index.html
+++ b/crypto/index.html
@@ -10,25 +10,35 @@
 <body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">menu</div>
-<div class="menu-item"><a href="/">Home</a></div>
-<div class="menu-item"><a href="/research.html">Research</a></div>
-<div class="menu-item"><a href="/publications.html">Publication</a></div>
-<div class="menu-item"><a href="/courses.html">Courses</a></div>
-<div class="menu-item"><a href="/activities.html">Activities</a></div>
-<div class="menu-category">Demos</div>
-<div class="menu-item"><a href="/webrtc">WebRTC</a></div>
-<div class="menu-item"><a href="/navier_stokes">Navier-Stokes_solver</a></div>
-<div class="menu-item"><a href="snake.html">Snake</a></div>
-<div class="menu-category">Software</div>
-<div class="menu-item"><a href="/store">Store</a></div>
-<div class="menu-item"><a href="/cooperation">Cooperation</a></div>
-<div class="menu-item"><a href="/crypto">Crypto</a></div>
-<div class="menu-category">links</div>
-<div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
-<div class="menu-item"><a href="/blog">Blog</a></div>
-</td>
+  <td id="layout-menu">
+    <div class="menu-category">menu</div>
+    <div class="menu-item"><a href="/">Home</a></div>
+    <div class="menu-item"><a href="/notes.html">Notes</a></div>
+    <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
+    <div class="menu-category">Demos</div>
+    <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
+    <div class="menu-item"><a href="/snake">Snake</a></div>
+    <div class="menu-category">Software</div>
+    <div class="menu-item"><a href="/NFT">NFTStore</a></div>
+    <div class="menu-item"><a href="/crypto">Crypto</a></div>
+    <div class="menu-category">links</div>
+    <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
+    <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
+    <div class="menu-item"><a href="https://mathoverflow.net/users/261646/汪楚文">MathOverflow</a></div>
+    <div class="menu-category">Visitor Stats.</div>
+    <div><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=57n5qo8841x&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
+    </div>
+    <div>
+    <!-- Begin ShinyStat Code -->
+    <script type="text/javascript" src="//codice.shinystat.com/cgi-bin/getcod.cgi?USER=SS-44156123-0286a"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full"></script>
+    <noscript>
+    <a href="https://www.shinystat.com/" target="_top">
+    <img src="//www.shinystat.com/cgi-bin/shinystat.cgi?USER=SS-44156123-0286a" alt="Site stats" style="border:0px" /></a>
+    </noscript>
+    <!-- End ShinyStat Code -->
+    </div>
+    </td>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="/fig/icarus.png" alt="CAT" width="100px" height="100px" />&nbsp;</td>
