--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 
 <b>joint work with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
 
-arXiv:2410.20489 [math.GT] <br />
+arXiv:2410.20489 [math.GT], 2024<br />
 
 
 </p>
@@ -295,7 +295,7 @@ arXiv:2410.20489 [math.GT] <br />
         <td class="c3"> Sanya, China </td>
     </tr>
     <tr class="r12">
-        <td class="c1"> 2025/04/15 </td>
+        <td class="c1"> 2025/04/05 </td>
         <td class="c2"> Beijing Geometry Day, Beijing Institute of Technology </td>
         <td class="c3"> Beijing, China </td>
     </tr>
