--- a/design/index.html
+++ b/design/index.html
@@ -41,49 +41,11 @@
     </div>
     </td>
 <td id="layout-content">
-  <div id="toptitle">
-    <h1>An Introduction to Colored Jones Polynomial</h1>
-    </div>
-    <h2>时间&地点</h2>
-    <ul>
-      <p>2021/12/25 4~6pm 人民大学数学学院三楼会议室</p>
-    </ul>
-    <h2>报告人</h2>
-    <ul>
-      <p><a href="/">汪楚文</a>(中国人民大学)</p>
-    </ul>
-    <h2>摘要</h2>
-    <ul>
-      <p>区分纽结是纽结理论中的重要问题，“纽结不变量”可用于区分非同痕的纽结，其对纽结(or流形)的分类有重要意义。常见的纽结不变量有数，多项式，群等形式。Colored Jones Polynomial是一种多项式形式的纽结不变量。一些几何领域的研究围绕着Colored Jones Polynomial进行，如尚未被完全证明的“体积猜想”。</p>
-      <p>本次报告的主要内容包括：[暂定]
-        <li><p>
-          纽结/链环及其diagram的基本介绍
-        </p>
-        </li>
-        <li><p>
-          Jones Poly.的形成，定义，证明。
-        </p>
-        </li>
-        <li><p>
-          Colored Jones Poly.的形成，定义，证明。
-        </p>
-        </li>
-        <li><p>
-          一些例子
-        </p>
-        </li>
-        <li><p>
-          其他有关纽结理论和体积猜想
-        </p>
-        </li>
-      </p>
-    </ul>
-    <h2>参考书</h2>
-    <ul>
-      <li><p><a href="/paper/kt.pdf">An Introduction to Quantum and Vassiliev Knot Invariants by David M. Jackson, Iain Moffatt (z-lib.org)</p>
-    </ul>
-</td>
-</tr>
-</table>
+  
+  <h2>数学学院十大事件书签</h2>
+  <ul>
+    <li><p><a href="zip/Paper.zip">数学学院十大事件书签250422</p>
+  </ul>
+
 </body>
 </html>
