--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <div class="menu-category">Demos</div>
 <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
 <div class="menu-item"><a href="/snake">Snake</a></div>
-<div class="menu-category">Software</div>
+<div class="menu-category">Creations</div>
 <div class="menu-item"><a href="/NFT">NFTStore</a></div>
 <div class="menu-item"><a href="/crypto">Crypto</a></div>
+<div class="menu-item"><a href="/design">Design</a></div>
 <div class="menu-category">links</div>
 <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
 <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
