--- a/design/index.html
+++ b/design/index.html
@@ -44,7 +44,7 @@
   
   <h2>数学学院十大事件书签</h2>
   <ul>
-    <li><p><a href="zip/Paper.zip">数学学院十大事件书签250422</p>
+    <li><p><a href="/paper/shuqian.pdf">数学学院十大事件书签250422</p>
   </ul>
 
 </body>
