--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ arXiv:2410.20489 [math.GT], 2024<br />
         <td class="c2"> Recent advances in the Volume Conjecture</td>
         <td class="c3"> Tsinghua Sanya International Forum </td>
         <td class="c4"> <a href="https://www.tsimf.cn/meeting/detail?id=415">Click Here</a></td>
-        <td class="c5"> <a href="/slides/">Click Here</a></td>
+        <td class="c5"> / </td>
     </tr>
 </table>
 </div></div>
