--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ arXiv:2410.20489 [math.GT], 2024<br />
         <td class="c3"> Beijing, China </td>
     </tr>
     <tr class="r6">
-        <td class="c1"> 2021/12/25 </td>
+        <td class="c1"> 2023/03/29 ~ 2023/03/31 </td>
         <td class="c2"> China Geometry Day </td>
         <td class="c3"> Beijing, China </td>
     </tr>
