--- a/notes.html
+++ b/notes.html
@@ -24,7 +24,6 @@
     <div class="menu-item"><a href="/design">Design</a></div>
     <div class="menu-category">links</div>
     <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
-    <div class="menu-item"><a href="https://twitter.com/Chuwen_WANG">Twitter</a></div>
     <div class="menu-item"><a href="https://mathoverflow.net/users/261646/汪楚文">MathOverflow</a></div>
     <div class="menu-category">Visitor Stats.</div>
     <div><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=57n5qo8841x&amp;m=1&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
@@ -54,5 +53,8 @@
   <ul>
     <li><p><a href="zip/Paper1.zip">Twist0318.zip</p>
   </ul>
+</td>
+</tr>
+</table>
 </body>
 </html>
