--- a/crypto/index.html
+++ b/crypto/index.html
@@ -19,7 +19,6 @@
     <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
     <div class="menu-item"><a href="/snake">Snake</a></div>
     <div class="menu-category">Creations</div>
-    <div class="menu-item"><a href="/NFT">NFTStore</a></div>
     <div class="menu-item"><a href="/crypto">Crypto</a></div>
     <div class="menu-item"><a href="/design">Design</a></div>
     <div class="menu-category">links</div>
@@ -120,6 +119,8 @@
 <h2>Event</h2>
 <h3>ICO</h3>
 <p>Please contact me: <a href="wenchuwangchuwen@gmail.com">wenchuwangchuwen@gmail.com</a></p>
+<h3>NFT[Opensea]<h3>
+<a href="https://opensea.io/accounts/0x61e22dbe4c8b9e3f6edb9f709b71953fe8486b7d">汪楚文的Opensea</a><br /><br />
 </td>
 </tr>
 </table>
