--- a/crypto/index.html
+++ b/crypto/index.html
@@ -120,7 +120,7 @@
 <h3>ICO</h3>
 <p>Please contact me: <a href="wenchuwangchuwen@gmail.com">wenchuwangchuwen@gmail.com</a></p>
 <h3>NFT[Opensea]<h3>
-<a href="https://opensea.io/accounts/0x61e22dbe4c8b9e3f6edb9f709b71953fe8486b7d">汪楚文的Opensea</a><br /><br />
+<p>NFT collections by Wang<a href="https://opensea.io/accounts/0x61e22dbe4c8b9e3f6edb9f709b71953fe8486b7d">Opensea</a></p>
 </td>
 </tr>
 </table>
