--- a/crypto/index.html
+++ b/crypto/index.html
@@ -119,8 +119,8 @@
 <h2>Event</h2>
 <h3>ICO</h3>
 <p>Please contact me: <a href="wenchuwangchuwen@gmail.com">wenchuwangchuwen@gmail.com</a></p>
-<h3>NFT[Opensea]<h3>
-<p>NFT collections by Wang<a href="https://opensea.io/accounts/0x61e22dbe4c8b9e3f6edb9f709b71953fe8486b7d">Opensea</a></p>
+<h3>NFT[Opensea]</h3>
+<p>NFT collections by Wang: <a href="https://opensea.io/accounts/0x61e22dbe4c8b9e3f6edb9f709b71953fe8486b7d">Opensea</a></p>
 </td>
 </tr>
 </table>
