--- a/snake/index.html
+++ b/snake/index.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
   <td id="layout-menu">
-    <div class="menSnakeegory">menu</div>
+    <div class="menu-category">menu</div>
     <div class="menu-item"><a href="/">Home</a></div>
     <div class="menu-item"><a href="/notes.html">Notes</a></div>
     <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
