--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 <li><p>B.S. , Pure Mathematics and Applied Mathematics
 <a href="https://www.ruc.edu.cn">Renmin University</a>, 2018</p>
 </li>
-
 </ul>
+
+
 <h2>Publications</h2>
 <ul>
 <!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
@@ -91,19 +92,16 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
   &nbsp;</td>
   <td align="left"><ul>
   <li><p><a href="/paper/FMT.pdf">Cyclotomic Expansion of the Colored `SU(n)` Invariants of Torus Knots</a><br />
-  
-  Chuwen Wang, ---<br />
-  
+  <b>Chuwen Wang, ---</b><br />
   in preparation<br />
-  
-  
   </p>
   </li>
   </ul>
   </td></tr></table>
 </ul>
+
+
 <ul>
-<!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
     &nbsp;</td>
     <td align="left"><ul>
@@ -115,18 +113,15 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
     </ul>
     </td></tr></table>
 </ul>
+
+
 <ul>
-<!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
 <img src="fig/twist.png" alt="CS" width="455px" height="160px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://arxiv.org/abs/2410.20489">Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots</a><br />
-
 <b>joint work with Huabin Ge, Yunpeng Meng, Yuxuan Yang</b><br />
-
 arXiv:2410.20489 [math.GT], 2024<br />
-
-
 </p>
 </li>
 </ul>
@@ -135,14 +130,11 @@ arXiv:2410.20489 [math.GT], 2024<br />
 
 
 <ul>
-<!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
 <table class="imgtable"><tr><td>
     &nbsp;</td>
     <td align="left"><ul>
     <li><p><a href="/paper/T.pdf">A proof of Atiyah-Floer Conjecture</a><br />
-
     <b>Chuwen Wang, ---</b><br />
-
     in preparation<br />
     </p>
     </li>
@@ -178,21 +170,21 @@ arXiv:2410.20489 [math.GT], 2024<br />
     <tr class="r2">
         <td class="c1"> 2021/12/25 </td>
         <td class="c2"> An Introduction to Colored Jones Polynomial </td>
-        <td class="c3"> Renmin University of China </td>
+        <td class="c3"> Mathematical Seminar [Renmin University of China] </td>
         <td class="c5"> <a href="/semi1.html">Click Here</a></td>
         <td class="c4"> /</td> 
     </tr>
     <tr class="r3">
         <td class="c1"> 2024/10/20 </td>
         <td class="c2"> On the Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots </td>
-        <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences, Xihu University </td>
+        <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences [Xihu University] </td>
         <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
         <td class="c5"> <a href="/slides/twistRT.pdf">Click Here</a></td>
     </tr>
     <tr class="r3">
         <td class="c1"> 2025/03/13 ~ 2025/03/17 </td>
         <td class="c2"> Recent advances in the Volume Conjecture</td>
-        <td class="c3"> Tsinghua Sanya International Forum </td>
+        <td class="c3"> Geometric topology and their related topics [Tsinghua Sanya International Forum M250302] </td>
         <td class="c4"> <a href="https://www.tsimf.cn/meeting/detail?id=415">Click Here</a></td>
         <td class="c5"> / </td>
     </tr>
