--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ arXiv:2410.20489 [math.GT], 2024<br />
     <tr class="r3">
         <td class="c1"> 2024/10/20 </td>
         <td class="c2"> On the Volume Conjecture for hyperbolic rational Dehn-filled 3-manifolds along the twist knots </td>
-        <td class="c3"> Mathematical Seminar at the Institute of Theoretical Sciences [Xihu University] </td>
+        <td class="c3"> 006 Recent Progress on the Volume Conjecture [Institute for Theoretical Sciences, Xihu University] </td>
         <td class="c4"> <a href="https://its.westlake.edu.cn/info/1065/2500.htm">Click Here</a></td>
         <td class="c5"> <a href="/slides/twistRT.pdf">Click Here</a></td>
     </tr>
