--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D , Pure Mathematics 
-<a href="https://www.ruc.edu.cn">Renmin University</a>, 2022</p>
+<li><p>Ph.D , Pure Mathematics, 
+<a href="https://www.ruc.edu.cn">Renmin University of China</a>, 2022</p>
 </li>
-<li><p>B.S. , Pure Mathematics and Applied Mathematics
-<a href="https://www.ruc.edu.cn">Renmin University</a>, 2018</p>
+<li><p>B.S. , Pure Mathematics and Applied Mathematics, 
+<a href="https://www.ruc.edu.cn">Renmin University of China</a>, 2018</p>
 </li>
 </ul>
 
