--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <div class="menu-item"><a href="/">Home</a></div>
 <div class="menu-item"><a href="/notes.html">Notes</a></div>
 <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
-<div class="menu-category">Demos</div>
+<div class="menu-category">Creations</div>
 <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
 <div class="menu-item"><a href="/snake">Snake</a></div>
-<div class="menu-category">Creations</div>
 <div class="menu-item"><a href="/crypto">Crypto</a></div>
 <div class="menu-item"><a href="/design">Design</a></div>
 <div class="menu-category">links</div>
@@ -63,7 +62,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 </p>
 </td></tr></table>
 
-<h2>Research</h2>
+<h2>About</h2>
 <ul>
 <li><p>Geometric Topology and Hyperbolic Geometry: Knot Theory, Volume Conjecture, Thurston's geometrization conjecture, Anti-de sitter space</p>
 </li>
@@ -86,33 +85,6 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 
 
 <h2>Publications</h2>
-<ul>
-<!--<li><p><a href="/paper/FMT.pdf">Structure, classification and volume conjecture of three-dimensional Hyperbolic Manifolds</a>,Wang Chuwen,arXiv.org,2021.</p></li>-->
-<table class="imgtable"><tr><td>
-  &nbsp;</td>
-  <td align="left"><ul>
-  <li><p><a href="/paper/FMT.pdf">Cyclotomic Expansion of the Colored `SU(n)` Invariants of Torus Knots</a><br />
-  <b>Chuwen Wang, ---</b><br />
-  in preparation<br />
-  </p>
-  </li>
-  </ul>
-  </td></tr></table>
-</ul>
-
-
-<ul>
-<table class="imgtable"><tr><td>
-    &nbsp;</td>
-    <td align="left"><ul>
-    <li><p><a href="/paper/CE.pdf">On the Rigidity of 3-manifold in the 3-dimensional anti-de Sitter Space</a><br />
-    <b>Chuwen Wang, ---</b><br />
-    in preparation<br />
-    </p>
-    </li>
-    </ul>
-    </td></tr></table>
-</ul>
 
 
 <ul>
@@ -131,17 +103,44 @@ arXiv:2410.20489 [math.GT], 2024<br />
 
 <ul>
 <table class="imgtable"><tr><td>
-    &nbsp;</td>
-    <td align="left"><ul>
-    <li><p><a href="/paper/T.pdf">A proof of Atiyah-Floer Conjecture</a><br />
-    <b>Chuwen Wang, ---</b><br />
-    in preparation<br />
-    </p>
-    </li>
-    </ul>
-    </td></tr></table>
+&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="/paper/T.pdf">A proof of Atiyah-Floer Conjecture</a><br />
+<b>Chuwen Wang, ---</b><br />
+in preparation<br />
+</p>
+</li>
+</ul>
+</td></tr></table>
 </ul>
 
+
+<ul>
+<table class="imgtable"><tr><td>
+&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="/paper/FMT.pdf">Cyclotomic Expansion of the Colored `SU(n)` Invariants of Torus Knots</a><br />
+<b>Chuwen Wang, ---</b><br />
+in preparation<br />
+</p>
+</li>
+</ul>
+</td></tr></table>
+</ul>
+
+
+<ul>
+<table class="imgtable"><tr><td>
+&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="/paper/CE.pdf">On the Rigidity of 3-manifold in the 3-dimensional anti-de Sitter Space</a><br />
+<b>Chuwen Wang, ---</b><br />
+in preparation<br />
+</p>
+</li>
+</ul>
+</td></tr></table>
+</ul>
 
 <h2>Talks</h2>
 <p>
