--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="/">Home</a></div>
 <div class="menu-item"><a href="/notes.html">Notes</a></div>
 <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
