--- a/crypto/index.html
+++ b/crypto/index.html
@@ -20,7 +20,7 @@
     <div class="menu-item"><a href="/snake">Snake</a></div>
     <div class="menu-item"><a href="/crypto">Crypto</a></div>
     <div class="menu-item"><a href="/design">Design</a></div>
-    <div class="menu-category">links</div>
+    <div class="menu-category">Links</div>
     <div class="menu-item"><a href="https://github.com/ravenwritingdesk">GitHub</a></div>
     <div class="menu-item"><a href="https://mathoverflow.net/users/261646/汪楚文">MathOverflow</a></div>
     <div class="menu-category">Visitor Stats.</div>
