--- a/design/index.html
+++ b/design/index.html
@@ -16,7 +16,7 @@
     <div class="menu-item"><a href="/notes.html">Notes</a></div>
     <div class="menu-item"><a href="https://blogwcw.wordpress.com">Blog</a></div>
     <div class="menu-category">Creations</div>
-    <div class="menu-item"><a href="/webrtc">WebRTC[Conference]</a></div>
+    <div class="menu-item"><a href="/webrtc">WebRTC</a></div>
     <div class="menu-item"><a href="/snake">Snake</a></div>
     <div class="menu-item"><a href="/crypto">Crypto</a></div>
     <div class="menu-item"><a href="/design">Design</a></div>
