--- a/index.html
+++ b/index.html
@@ -64,12 +64,7 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 
 <h2>About</h2>
 <ul>
-<li><p>Geometric Topology and Hyperbolic Geometry: Knot Theory, Volume Conjecture, Thurston's geometrization conjecture, Anti-de sitter space</p>
-</li>
-<li><p>Algebraic Geometry, Homotopy Theory and Representation Theory: K-theory, Quantum groups, Ribbon Hopf algebra</p>
-</li>
-<li><p>Mathematical Physics: AdS/CFT duality, Chern-Simons gauge theory, topological quantum field theory</p>
-</li>
+<p>I'm currently working in the areas of geometric topology and hyperbolic geometry, especially topics related to knot theory, the volume conjecture, and Thurston's geometrization conjecture. I also occasionally explore the geometry of anti-de Sitter (AdS) spaces. Beyond that, I have a growing interest in algebraic geometry, homotopy theory, and representation theory—particularly K-theory, quantum groups, and ribbon Hopf algebras. On the side, I enjoy thinking about ideas from mathematical physics, like the AdS/CFT correspondence, Chern-Simons gauge theory, and topological quantum field theory. These fields may seem quite different at first glance, but I'm always fascinated by the unexpected connections between them.</p>
 </ul>
 
 
