--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 <td align="left"><h2>Chuwen Wang<!--<img src="/fig/cn.png" alt="CN" />--></a> <br /></h2>
 <p>Ph.D  candidate<br />
 
-59 Zhongguancun Street, Haidian, Beijing, China
-<p><a href="mailto:www.chuwenwang@ruc.edu.cn">www.chuwenwang@ruc.edu.cn</a> <br />
-    <a href="mailto:www.chuwenwang2001@gmail.com">www.chuwenwang2001@gmail.com</a> <br />    
+
+<p><a href="mailto:www.chuwenwang@ruc.edu.cn">chuwenwang [at] ruc [dot] edu [dot] cn</a> <br />
+    <a href="mailto:www.chuwenwang2001@gmail.com">chuwenwang2001 [at] gmail [dot] com</a> <br />    
 </p>
+
+59 Zhongguancun Street, Haidian, Beijing, China<br/>
 <a href="https://twitter.com/Chuwen_WANG" class="twitter-follow-button">Follow @WangC.W.</a>
 <script>!function(d,s,id){var
 js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document,
@@ -63,9 +65,8 @@ js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';i
 </td></tr></table>
 
 <h2>About</h2>
-<ul>
 <p>I'm currently working in the areas of geometric topology and hyperbolic geometry, especially topics related to knot theory, the volume conjecture, and Thurston's geometrization conjecture. I also occasionally explore the geometry of anti-de Sitter (AdS) spaces. Beyond that, I have a growing interest in algebraic geometry, homotopy theory, and representation theory—particularly K-theory, quantum groups, and ribbon Hopf algebras. On the side, I enjoy thinking about ideas from mathematical physics, like the AdS/CFT correspondence, Chern-Simons gauge theory, and topological quantum field theory. These fields may seem quite different at first glance, but I'm always fascinated by the unexpected connections between them.</p>
-</ul>
+
 
 
 <h2>Education</h2>
